--- a/elementals/templates/home.html
+++ b/elementals/templates/home.html
@@ -22,7 +22,7 @@
         {% for card in cards %}
           <div class="card " style="width: 18rem;">
             <h5 class="card-header bg-dark text-light">{{ card.name }}</h5>
-            <div align="right">
+            <div align="right" class="bg-light">
               <strong>{{ card.cost_as_html|safe }}</strong>
 
             </div>
