starting API and views

--- a/elementals/templates/base.html
+++ b/elementals/templates/base.html
@@ -20,9 +20,17 @@
 
     </head>
 <body>
+  <style>
+    body {
+      padding-top: 70px;
+    }
+  </style>
+
   {% include "_navbar.html" %}
+
   {% block content %}
   {% endblock %}
+
 </body>
 
 </html>
