--- a/elementals/templates/_navbar.html
+++ b/elementals/templates/_navbar.html
@@ -10,9 +10,11 @@
               <li class="nav-item active">
                   <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
               </li>
+              {% if user.username %}
               <li class="nav-item">
                   <a class="nav-link" href="{% url 'profile' user.username %}">My Profile</a>
               </li>
+              {% endif %}
               <li class="nav-item">
                   <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
               </li>
