--- a/elementals/templates/create_card.html
+++ b/elementals/templates/create_card.html
@@ -1,8 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container">
+{% if messages %}
+
+<ul class="messages">
+    {% for message in messages %}
+    <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</div>
+    {% endfor %}
+</ul>
+{% endif %}
+
 <h2>Create a card </h2>
-    <form action="/your-name/" method="post">
+    <!-- TODO:  Bootstrap the forms.  crispy-forms? -->
+    <form method="post">
         {% csrf_token %}
         <table>
         {{ form }}
@@ -10,5 +21,5 @@
         <input type="submit" value="Submit" class="btn btn-primary">
     </form>
 
-
+</div>
 {% endblock %}
