--- a/elementals/templates/create_card.html
+++ b/elementals/templates/create_card.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div class="container bg-light">
 {% if messages %}
 
 <ul class="messages">
