added a line to confirmation page

--- a/elementals/templates/django_registration/registration_complete.html
+++ b/elementals/templates/django_registration/registration_complete.html
@@ -2,4 +2,5 @@
 
 {% block content %}
     <h1>Registration Complete!</h1>
+    <h3>You should receive and email at the address provided to confirm and activate your account.</h3>
 {% endblock %}
