--- a/elementals/templates/home.html
+++ b/elementals/templates/home.html
@@ -8,7 +8,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h1 class="display-3">Hello, world!</h1>
+            <h1 class="display-3">Elementals</h1>
             <p>In the time of chimpanzees, I was a monkey.  Butane in my veins and a mouth to cut the chunky with the plastic eyeballs, spraypaint the vegetables.  Dog food stalls with the beef cake pantyhose.</p>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
         </div>
